fixing alignment and drop down

--- a/styles/components/Header.scss
+++ b/styles/components/Header.scss
@@ -29,7 +29,7 @@
       max-width: $max_page_width;
       width: $max_page_width;
 
-      padding: 10px;
+      padding: 0 10px;
       a {
         color: white;
         font-weight: bold;
@@ -53,7 +53,8 @@
             }
           }
           position: relative;
-          padding-right: 10px;
+          padding: 10px 20px 10px 0px;
+
           ul {
             background-color: #f1f1f1;
             position: absolute;
